# Robot-MCU-Controller

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults
components/TM1638plus/: CMakeLists.txt
components/TMCStepper/: CMakeLists.txt
components/bluepad32/arch/: uni_console_esp32.c
main/: CMakeLists.txt  idf_component.yml
main/src/: config.h  init_robot.cpp  init_robot.h  main.cpp
main/src/libs/: Ld19p.cpp  Ld19p.h  LedcStepper.cpp  LedcStepper.h
main/src/modules/: Battery.cpp  Battery.h  IHM.cpp  IHM.h  Lidar.cpp  Lidar.h  Lift.cpp  Lift.h  Motion.cpp  Motion.h  RemoteControl.cpp  RemoteControl.h
main/src/programs/: Program1.cpp  Program1.h  Program2.cpp  Program2.h  Program3.cpp  Program3.h  Program4.cpp  Program4.h  ProgramBase.h  ProgramRemoteControl.cpp  ProgramRemoteControl.h
